--- a/Tabang-Hub/Tabang-Hub/Views/Message/Message.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Message/Message.cshtml
@@ -1,8 +1,14 @@
 ﻿@model Tabang_Hub.Utils.Lists
-@{
-    ViewBag.Title = "Message";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+    @if(Model.userAccount != null && Model.userAccount.roleId == 2)
+    {
+        ViewBag.Title = "Message";
+        Layout = "~/Views/Shared/_Organization.cshtml";
+    }
+    else
+    {
+        ViewBag.Title = "Message";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
 
 <link href="~/Content/Css/message.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
