--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.css">
     <link rel="stylesheet" href="~/Content/vendors/bootstrap-icons/bootstrap-icons.css">
     <link rel="stylesheet" href="~/Content/css1/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="~/Content/images1/favicon.svg" type="image/x-icon">
 </head>
 
