1 og 0 na ang status sa userdonated

--- a/Tabang-Hub/Tabang-Hub/Views/Organization/Details.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Organization/Details.cshtml
@@ -256,7 +256,7 @@
 
                                     foreach (var donated in Model.listofUserDonated)
                                     {
-                                        if(donated.Status != "Failed")
+                                        if(donated.Status != 1)
                                         {
                                             raisedAmount += donated.amount;
                                         }
